Atrosha/proxy/errors.txt
    Checking atrosha-proxy v0.2.0 (C:\Python\project ycombinator\Atrosha\proxy)
error[E0382]: borrow of moved value: `redis_client`
  --> src\main.rs:96:23
   |
64 |     let redis_client = match Client::open(redis_url.clone()) {
   |         ------------ move occurs because `redis_client` has type `redis::Client`, which does not implement the `Copy` trait
...
84 |     let registry = Arc::new(AgentRegistry::new(redis_client));
   |                                                ------------ value moved here
...
96 |         redis_client: redis_client.clone(),
   |                       ^^^^^^^^^^^^ value borrowed here after move
   |
note: consider changing this parameter type in method `new` to borrow instead if owning the value isn't necessary
  --> src\registry.rs:19:24
   |
19 |     pub fn new(client: Client) -> Self {
   |            ---         ^^^^^^ this parameter takes ownership of the value
   |            |
   |            in this method
help: consider cloning the value if the performance cost is acceptable
   |
84 |     let registry = Arc::new(AgentRegistry::new(redis_client.clone()));
   |                                                            ++++++++

warning: unused variable: `permit`
   --> src\main.rs:179:10
    |
179 |     let (permit, permit_id, signature_status) = match verify_permit_and_intent(
    |          ^^^^^^ help: if this is intentional, prefix it with an underscore: `_permit`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `shadow_mode`
   --> src\main.rs:344:5
    |
344 |     shadow_mode: bool,
    |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_shadow_mode`

For more information about this error, try `rustc --explain E0382`.
warning: `atrosha-proxy` (bin "atrosha-proxy") generated 2 warnings
error: could not compile `atrosha-proxy` (bin "atrosha-proxy") due to 1 previous error; 2 warnings emitted
